# solana-practice

./: .gitignore  README.md
anchor-practice/: Anchor.toml  README.md
anchor-practice/tests/: anchor-practice.ts
anchor-project/: Anchor.toml  README.md  package.json  tsconfig.json
anchor-project/app/: vite.config.ts
anchor-project/client/: index.ts
anchor-project/migrations/: deploy.ts
anchor-project/programs/gm/: Cargo.toml
anchor-project/programs/gm/src/: lib.rs
anchor-project/tests/: gm.ts
arcium practice/: README.md  package.json
arcium practice/src/: arciumPractice.js  basicWeb3.js  computeBudgetAndPriorityFees.js  createToken.js  getProgramAccounts.js  litesvmStub.js  memoAndAlt.js  mintAndTransfer.js  pdaBasics.js  token2022Basics.js  versionedTransactions.js
arcium project-1/: README.md  package.json
arcium project-1/src/: index.js
docs/: architecture.md  status.md  technical.md
litsvmproject/: package.json
litsvmproject/src/: index.js  test.js
privacy-cash-code-review/: .gitignore  README.md
privacy-cash-code-review/indexer/: .env.sample  README.md  jest.config.js  jest.setup.js  package.json  tsconfig.json
privacy-cash-code-review/reviews/: README.md  audits.md  circuits.md  indexer.md  ops.md  program.md  scripts.md  security.md
privacy-cash-code-review/scripts/: README.md  bn128_utils.ts  (+20 more)
private-credit-project/: .eslintrc.js  .gitignore  README.md  env.example  package.json  tsconfig.json
project1/: env.example  package.json
solana/: env.example  eslint.config.js  jest.config.js  package.json
tasks/: tasks.md
(+111 files in other folders)
