[package]
name = "gm"
version = "0.1.0"
description = "Simple greeting program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"


